--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="custom_category_es6.js"></script>
     <script src="toolbox_label_es6.js"></script>
     <link rel="stylesheet" href="toolbox_style.css" />
+    <link rel="blocklyrender" href="index.js" />
     
     <style>
       html,
